--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.1",
     "node-fetch": "^2.6.1",
+    "node-mailer": "^0.1.1",
     "path": "^0.12.7"
   },
   "devDependencies": {}
