--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.17.1",
     "node-fetch": "^2.6.1",
     "node-mailer": "^0.1.1",
+    "nodemailer-smtp-transport": "^2.7.4",
     "path": "^0.12.7"
   },
   "devDependencies": {}
