--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.1",
+    "googleapis": "^59.0.0",
     "node-fetch": "^2.6.1",
     "node-mailer": "^0.1.1",
     "nodemailer-smtp-transport": "^2.7.4",
