--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.1",
     "googleapis": "^59.0.0",
+    "mongoose": "^5.10.9",
     "node-fetch": "^2.6.1",
     "node-mailer": "^0.1.1",
     "nodemailer-smtp-transport": "^2.7.4",
